@@ -75,6 +75,12 @@
 # Copy the logging context from parent threads to children
 -Dlog4j2.isThreadContextMapInheritable=true
 
+11-:--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+11-:--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+11-:--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+11-:--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+11-:--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+
 11-:--add-opens=java.base/java.security=ALL-UNNAMED
 11-:--add-opens=java.base/java.io=ALL-UNNAMED
 11-:--add-opens=java.base/java.nio.channels=ALL-UNNAMED
